# cmake_rpm_issue

./: CMakeLists.txt  LICENSE  README.md  fibConfig.cmake
.github/workflows/: ci.yml
include/fib/: fib.h
src/: fib.cpp
